# maine-bills

./: .gitignore  CLAUDE.md  README.md  committee_db.ipynb  committee_list.csv  environment.yml  pdfium.ipynb  pypdf.ipynb  pyproject.toml  scraper.py  setup-miniconda-patched-environment.yml
.github/workflows/: run-with-conda.yml  scraper-uv.yml
131/txt/: 131-LD-0002-CA_A_H221.txt  131-LD-0002-CA_B_H222.txt  131-LD-0003-CA_A_H1.txt  131-LD-0003-HA_A_H2.txt  131-LD-0003-SA_A_S1.txt  131-LD-0003-SA_A_S2.txt  131-LD-0003-SA_A_S3.txt  131-LD-0003-SA_A_S4.txt  131-LD-0004-CA_A_H141.txt  131-LD-0017-CA_A_H55.txt  131-LD-0023-CA_A_S28.txt  131-LD-0024-CA_A_S39.txt  131-LD-0024-CA_A_SA_A_S65.txt  131-LD-0025-CA_A_S513.txt  131-LD-0028-CA_A_S31.txt  131-LD-0028-CA_B_S32.txt  131-LD-0030-HA_A_H75.txt  131-LD-0036-CA_A_S38.txt  131-LD-0037-CA_A_S204.txt  131-LD-0039-CA_A_S112.txt  131-LD-0040-CA_A_S709.txt  131-LD-0053-CA_A_H110.txt  131-LD-0057-CA_A_H66.txt  131-LD-0062-CA_A_H190.txt  131-LD-0063-CA_A_H774.txt  131-LD-0069-CA_A_H72.txt  131-LD-0071-CA_A_H42.txt  131-LD-0074-CA_A_S33.txt  131-LD-0087-CA_A_H212.txt  131-LD-0088-CA_A_H104.txt  131-LD-0091-CA_A_H964.txt  131-LD-0100-CA_A_H120.txt  131-LD-0103-CA_A_H168.txt  131-LD-0114-CA_A_S12.txt  131-LD-0115-CA_A_S223.txt  131-LD-0115-CA_B_S224.txt  131-LD-0117-CA_A_S24.txt  131-LD-0118-CA_A_S20.txt  131-LD-0121-CA_A_S49.txt  131-LD-0121-CA_A_SA_A_S504.txt  (+979 more)
docs/: CROSS-SESSION-VALIDATION.md  DEVELOPMENT.md  ERROR-PATTERNS-CATALOG.md  FINAL-QUALITY-REPORT.md  QUALITY-GATE-RESULTS.md  QUALITY-IMPROVEMENT-HISTORY.md  READINESS-ASSESSMENT.md
docs/plans/: 2026-02-10-convert-to-hf.md  2026-02-10-enhance-text-extraction.md  2026-02-10-extraction-feedback-loop-design.md  2026-02-10-modernize-to-uv.md  2026-02-18-openstates-sponsor-linking.md  2026-02-18-sponsor-extraction-fix.md  phase-1.5-quality-gate.md
experiments/: final_quality_fix.md
experiments/feedback_loop_v2_20260211_102937/: summary.md
experiments/quality_gate_20260211_134412/: quality_metrics_baseline.json  reviewer_prompt.md  test_results_baseline.json
scripts/: README.md  demo_extraction.py  demo_text_quality.py  generate_final_summary.py
scripts/experiments/: feedback_loop.py  quality_gate_feedback.py  tester_prompt.py
src/: bill_scraper.py  scraper.py
src/maine_bills/: cli.py  (+5 more)
txt/: Maine-2023-LD73-Introduced.txt
(+90 files in other folders)
