[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "maine-bills"
version = "2.0.0"
description = "Scraper and dataset publisher for Maine legislative bill text"
readme = "README.md"
license = { text = "MIT" }
authors = [{ name = "Philip Mathieu" }]
requires-python = ">=3.11"
dependencies = [
    "requests>=2.31",
    "beautifulsoup4>=4.12",
    "pymupdf>=1.25",
    "tenacity>=9.0",
    "huggingface-hub>=1.0",
    "pandas>=2.2",
    "pyarrow>=18.0",
    "tqdm>=4.67.3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "ruff>=0.8",
    "datasets>=3.0",
]

[project.scripts]
maine-bills = "maine_bills.cli:main"

[tool.pytest.ini_options]
minversion = "7.0"
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "-v --cov=src/maine_bills --cov-report=term --cov-report=html -m 'not integration'"
markers = [
    "integration: marks tests as integration tests that hit external services",
]

[tool.ruff]
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[dependency-groups]
dev = [
    "jupyter>=1.1.1",
    "python-dotenv>=1.2.1",
    "rapidfuzz>=3.14.3",
]
